some changes added for find out the host and guest user

--- a/src/components/message-style.css
+++ b/src/components/message-style.css
@@ -13,3 +13,14 @@
     padding: 0 !important;
     margin: 0 !important;
 }
+.message__realUser{
+    margin-left: auto;
+    color: white;
+    text-align: left !important;
+}
+.message__userCard{
+    background-color: blue !important;
+}
+.message__guestCard{
+    background-color: grey !important;
+}
